--- a/app/globals.css
+++ b/app/globals.css
@@ -53,3 +53,11 @@ width: 10px;
   font-size: 16px;
   cursor: pointer;
 }
+
+
+@media only screen and (max-width:475px){
+  .drawer{
+    width: 380px;
+  }
+
+}
